changes added by tejaswini

--- a/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget1/base-tables-widget1.component.html
+++ b/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget1/base-tables-widget1.component.html
@@ -589,7 +589,7 @@
                         Name:</label>
                     </div>
                     <div class="col-md-3">
-                      <input class="form-control" placeholder="Product" formControlName="productCategory" [disabled]="true">
+                      <input class="form-control" placeholder="Product" formControlName="productCategory" [disabled]="isDisabled">
                     </div>
                     <div class="col-md-2">
                       <label class="labelNewMargin">Product
