--- a/src/app/_metronic/partials/content/widgets/charts/charts-widget6/charts-widget6.component.html
+++ b/src/app/_metronic/partials/content/widgets/charts/charts-widget6/charts-widget6.component.html
@@ -37,10 +37,10 @@
               <div class="col-9">
                 <h3><b>{{companyName}}</b></h3>
                 <h5><b>{{oilCompanyName}}</b> </h5>
-                <!-- <h6> <b>{{address1}} {{address2}} {{city}}</b> <br><b>{{state}} {{pin}} <br>
-                    GST</b> : {{GSTNumber}} -->
+                <h6> <b>{{address1}} {{address2}} {{city}}</b> <br><b>{{state}} {{pin}} <br>
+                    GST</b> : {{GSTNumber}}
                 <b> Phone </b>: {{mobile}}
-                <!-- </h6> -->
+                </h6>
                 <h6><b>From : {{crPurchaseStartDate}} To :
                     {{crPurchaseEndDate}}</b> </h6>
                 <h6><b>Invoice No. : <span>{{sysGeneInvoiceNumber}}</span></b></h6>
@@ -292,10 +292,10 @@
               <div class="col-9">
                 <h3><b>{{companyName}}</b></h3>
                 <h5><b>{{oilCompanyName}}</b> </h5>
-                <!-- <h6> <b>{{address1}} {{address2}} {{city}}</b> <br><b>{{state}} {{pin}} <br>
-                    GST</b> : {{GSTNumber}} -->
+                <h6> <b>{{address1}} {{address2}} {{city}}</b> <br><b>{{state}} {{pin}} <br>
+                    GST</b> : {{GSTNumber}}
                 <b> Phone </b>: {{mobile}}
-                <!-- </h6> -->
+                </h6>
                 <h6><b>Month : {{month}} </b> </h6>
                 <h6><b>Invoice No. : <span>{{sysGeneInvoiceNumber}}</span></b></h6>
                 <h6> <b>statement generated on: </b>{{statementCreatedAt | date:"dd/MM/yyyy"}} </h6>
