--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget10/lists-widget10.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget10/lists-widget10.component.html
@@ -174,7 +174,7 @@
             <div class="row">
               <label class="col-md-3"><b>Staff Name:</b></label>
               <div class="col-md-6">
-                <input class="form-control" readonly [(ngModel)]="updatedStaffName"
+                <input class="form-control" disabled [(ngModel)]="updatedStaffName"
                   [ngModelOptions]="{standalone: true}">
               </div>
             </div>
@@ -182,7 +182,7 @@
             <div class="row">
               <label class="col-md-3"><b>Mobile Number:</b></label>
               <div class="col-md-6">
-                <input class="form-control" readonly [(ngModel)]="updatedMobileNumber"
+                <input class="form-control" disabled [(ngModel)]="updatedMobileNumber"
                   [ngModelOptions]="{standalone: true}">
               </div>
             </div>
@@ -190,7 +190,7 @@
             <div class="row">
               <label class="col-md-3"><b>Role:</b></label>
               <div class="col-md-6">
-                <input class="form-control" readonly [(ngModel)]="updatedRole" [ngModelOptions]="{standalone: true}">
+                <input class="form-control" disabled [(ngModel)]="updatedRole" [ngModelOptions]="{standalone: true}">
               </div>
             </div>
             <br>
