--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget15/lists-widget15.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget15/lists-widget15.component.html
@@ -89,12 +89,12 @@
               <div class="col-md-9"></div>
               <div class="col-md-1">
                 <span style="font-size: 35px;cursor: pointer;" (click)="exportPDFamount()" ngbTooltip="Download PDF"
-                  placement="bottom"><i class="fas fa-file-pdf"></i></span><br>
+                  placement="bottom"><i class="fas fa-file-pdf" style="font-size: 30px;"></i></span><br>
               </div>
 
               <div class="col-md-1">
                 <span style="font-size: 35px;cursor: pointer;" (click)="exportExcelamount()" ngbTooltip="Download CSV"
-                  placement="bottom"><i class="fas fa-file-csv"></i></span><br>
+                  placement="bottom"><i class="fas fa-file-csv" style="font-size: 30px;"></i></span><br>
               </div>
             </div>
             <br>
@@ -158,12 +158,12 @@
 
                 <div class="col-md-1">
                   <span style="font-size: 35px;cursor: pointer;" (click)="exportPDFQuantity()" ngbTooltip="Download PDF"
-                    placement="bottom"><i class="fas fa-file-pdf"></i></span><br>
+                    placement="bottom"><i class="fas fa-file-pdf" style="font-size: 30px;"></i></span><br>
                 </div>
 
                 <div class="col-md-1">
                   <span style="font-size: 35px;cursor: pointer;" (click)="exportExcelQuantity()"
-                    ngbTooltip="Download CSV" placement="bottom"><i class="fas fa-file-csv"></i></span><br>
+                    ngbTooltip="Download CSV" placement="bottom"><i class="fas fa-file-csv" style="font-size: 30px;"></i></span><br>
                 </div>
               </div>
             </form>
