--- a/src/app/_metronic/partials/content/widgets/tiles/tiles-widget4/tiles-widget4.component.html
+++ b/src/app/_metronic/partials/content/widgets/tiles/tiles-widget4/tiles-widget4.component.html
@@ -106,13 +106,13 @@
           <div class="col-sm-3">
             <div class="text-sm-end">
               <span style="font-size: 35px;cursor: pointer;" ngbTooltip="Download PDF" placement="bottom"
-                (click)="exportToPDF()"><i class="fas fa-file-pdf"></i></span> <br>
+                (click)="exportToPDF()"><i class="fas fa-file-pdf" style="font-size: 30px;"></i></span> <br>
             </div>
           </div>
           <div class="col-sm-1">
             <div class="text-sm-end">
               <span style="font-size: 35px;cursor: pointer;" ngbTooltip="Download CSV" placement="bottom"
-                (click)="exportexcel()"><i class="fas fa-file-csv"></i></span> <br>
+                (click)="exportexcel()"><i class="fas fa-file-csv" style="font-size: 30px;"></i></span> <br>
             </div>
           </div>
         </div>
