--- a/src/app/_metronic/partials/content/widgets/charts/charts-widget3/charts-widget3.component.html
+++ b/src/app/_metronic/partials/content/widgets/charts/charts-widget3/charts-widget3.component.html
@@ -53,14 +53,12 @@
 
                     <div class="col-lg-1">
                       <span style="font-size: 35px;cursor: pointer;" (click)="exportToPDF()" ngbTooltip="Download PDF"
-                        placement="bottom"><i class="fas fa-file-pdf"></i></span><br>
+                        placement="bottom"><i class="fas fa-file-pdf" style="font-size: 30px;"></i></span><br>
                     </div>
                     <div class="col-lg-1">
                       <span style="font-size: 35px;cursor: pointer;" (click)="oilCompanyExcelDownload()"
-                        ngbTooltip="Download CSV" placement="bottom"><i class="fas fa-file-csv"></i></span><br>
+                        ngbTooltip="Download CSV" placement="bottom"><i class="fas fa-file-csv" style="font-size: 30px;"></i></span><br>
                     </div>
-
-
                   </div>
                 </div>
 
