changes added by tejaswini

--- a/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -695,7 +695,7 @@
             </div>
           </div>
         </div>
-        <div *ngIf="isOldAccounting" class="menu-item menu-accordion" routerLinkActive="here show"
+        <!-- <div *ngIf="isOldAccounting" class="menu-item menu-accordion" routerLinkActive="here show"
           data-kt-menu-trigger="click">
           <span class="menu-link">
             <span class="menu-bullet">
@@ -757,7 +757,7 @@
               </span>
             </div>
           </div>
-        </div>
+        </div> -->
         <div *ngIf="isFuelPrice" class="menu-item menu-accordion" routerLinkActive="here show"
           data-kt-menu-trigger="click" routerLink="/pump/fuelPrice">
           <span class="menu-link">
