--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget32/tables-widget32.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget32/tables-widget32.component.html
@@ -6,7 +6,7 @@
     <body *ngIf="!statementInvoice" id="contentToConvert">
         <div id="page-wrap">
             <div class="col-md-12 noprint">
-                &nbsp; <button class="noprint" style="font-size: medium;" onclick="window.print()"> &nbsp;&nbsp;<i
+                &nbsp; <button class="noprint" style="font-size: medium;"  printSectionId="sanjay" ngxPrint> &nbsp;&nbsp;<i
                         class="fa fa-print" aria-hidden="true"></i> &nbsp;</button>
             </div>
 
