--- a/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget14/base-tables-widget14.component.html
+++ b/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget14/base-tables-widget14.component.html
@@ -26,7 +26,7 @@
                 <button *ngIf="isSetPath == 'Individual'" class="btn btn-outline-success my-2 my-sm-0 btn-sm "(click) = "goToBack()">Back</button>
                 </span> -->
 
-      &nbsp; <button class="noprint" style="font-size: medium;" onclick="window.print()"> &nbsp;&nbsp;<i
+      &nbsp; <button class="noprint" style="font-size: medium;" printSectionId="sanjay" ngxPrint> &nbsp;&nbsp;<i
           class="fa fa-print" aria-hidden="true"></i> &nbsp;</button>
     </div>
 
@@ -391,7 +391,7 @@
                     <button *ngIf="isSetPath == 'Individual'" class="btn btn-outline-success my-2 my-sm-0 btn-sm "(click) = "goToBack()">Back</button>
                     </span> -->
 
-      &nbsp; <button class="noprint" style="font-size: medium;" onclick="window.print()"> &nbsp;&nbsp;<i
+      &nbsp; <button class="noprint" style="font-size: medium;" printSectionId="sanjay" ngxPrint> &nbsp;&nbsp;<i
           class="fa fa-print" aria-hidden="true"></i> &nbsp;</button>
     </div>
 
