--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget6/mixed-widget6.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget6/mixed-widget6.component.html
@@ -96,7 +96,7 @@
 
     <div id="page-wrap">
       <div class="col-md-12">
-        &nbsp; <button class="noprint" style="font-size: medium;" onclick="window.print()"> &nbsp;&nbsp;<i
+        &nbsp; <button class="noprint" style="font-size: medium;"  printSectionId="sanjay" ngxPrint> &nbsp;&nbsp;<i
             class="fa fa-print" aria-hidden="true"></i> &nbsp;</button>
       </div>
       <!-- Designed BY SANJAY sir Added BY PRAMOD  27/02/2021 -->
