--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget8/mixed-widget8.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget8/mixed-widget8.component.html
@@ -98,7 +98,7 @@
   <body id="contentToConvert">
     <div id="page-wrap">
       <div class="col-md-12 noprint">
-        &nbsp; <button class="noprint" style="font-size: medium;" onclick="window.print()"> &nbsp;&nbsp;<i
+        &nbsp; <button class="noprint" style="font-size: medium;"  printSectionId="sanjay" ngxPrint> &nbsp;&nbsp;<i
             class="fa fa-print" aria-hidden="true"></i> &nbsp;</button>
       </div>
 
