--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget27/tables-widget27.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget27/tables-widget27.component.html
@@ -50,20 +50,20 @@
                         <div class="col-md-1">
                             <div class="text-sm-end">
                                 <span style="font-size: 35px;cursor: pointer;" ngbTooltip="Download PDF"
-                                    placement="bottom" (click)="exportToPDF()"><i class="fas fa-file-pdf"></i></span>
+                                    placement="bottom" (click)="exportToPDF()"><i class="fas fa-file-pdf" style="font-size: 30px;"></i></span>
 
                             </div>
                         </div>
                         <div class="col-md-1">
                             <div class="text-sm-end">
                                 <span style="font-size: 35px;cursor: pointer;" ngbTooltip="Download CSV"
-                                    placement="bottom" (click)="exportexcel()"><i class="fas fa-file-csv"></i></span>
+                                    placement="bottom" (click)="exportexcel()"><i class="fas fa-file-csv" style="font-size: 30px;"></i></span>
                             </div>
                         </div>
                         <div class="col-md-1">
                             <div class="text-sm-end">
                                 <span style="font-size: 35px;cursor: pointer;" ngbTooltip="Download Details CSV"
-                                    placement="bottom" (click)="exportExcel()"><i class="fas fa-file-csv"></i></span>
+                                    placement="bottom" (click)="exportExcel()"><i class="fas fa-file-csv" style="font-size: 30px;"></i></span>
                             </div>
                         </div>
                     </div>
