--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget2/mixed-widget2.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget2/mixed-widget2.component.html
@@ -84,7 +84,7 @@
                                     transform: translate(-50%, -50%);">
                     <div class="row justify-content-center">
                       <div class="col-xl-10" style="color: red">
-                        <i class="fa fa-exclamation-triangle fa-fw fa-6x"></i>
+                        <i class="fa fa-exclamation-triangle fa-fw fa-6x" style="color: red"></i>
                       </div>
                     </div>
                   </div>
@@ -120,7 +120,7 @@
                   style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
                   <div class="row justify-content-center">
                     <div class="col-xl-10" style="color: red">
-                      <i class="fa fa-exclamation-triangle fa-fw fa-6x"></i>
+                      <i class="fa fa-exclamation-triangle fa-fw fa-6x" style="color: red"></i>
                     </div>
                   </div>
                 </div>
@@ -156,7 +156,7 @@
                       <td style="text-align: left;border-width: 1px; border-color: #000;">
                         <span *ngIf="viewCorpFlag.length" class="col-md-1" (click)="viewFlag(viewFlagModel)"
                           style="color:red;cursor:pointer;font-size: x-large;">
-                          <i class="fa fa-exclamation-triangle fa-fw fa-3x"></i>
+                          <i class="fa fa-exclamation-triangle fa-fw fa-3x" style="color: red"></i>
                         </span>
                         <span *ngIf="!viewCorpFlag.length">
                           None
