--- a/src/app/_metronic/partials/content/widgets/stats/stats-widget16/stats-widget16.component.html
+++ b/src/app/_metronic/partials/content/widgets/stats/stats-widget16/stats-widget16.component.html
@@ -157,7 +157,7 @@
                                           transform: translate(-50%, -50%);">
               <div class="row justify-content-center">
                 <div class="col-xl-10" style="color: red">
-                  <i class="fa fa-exclamation-triangle fa-fw fa-6x"></i>
+                  <i class="fa fa-exclamation-triangle fa-fw fa-6x" style="color: red" ></i>
                 </div>
               </div>
             </div>
@@ -200,7 +200,7 @@
                           transform: translate(-50%, -50%);">
               <div class="row justify-content-center">
                 <div class="col-xl-10" style="color: red">
-                  <i class="fa fa-exclamation-triangle fa-fw fa-6x"></i>
+                  <i class="fa fa-exclamation-triangle fa-fw fa-6x" style="color: red"></i>
                 </div>
               </div>
             </div>
@@ -275,7 +275,7 @@
                 <td style="text-align: left;border: solid 1px black; cursor:pointer;border-bottom: solid 1px black;"
                   (click)="viewFlag(viewFlagModel)">
                   <span *ngIf="viewCorpFlag.length" class="col-md-1" style="color:rgb(255, 0, 0);cursor:pointer;">
-                    <i class="fa fa-exclamation-triangle fa-fw fa-3x"></i>
+                    <i class="fa fa-exclamation-triangle fa-fw fa-3x" style="color: red"></i>
                   </span>
 
                   <span *ngIf="!viewCorpFlag.length" class="col-md-1">
