--- a/src/app/pages/dealer/credit/view-sales/view-sales.component.html
+++ b/src/app/pages/dealer/credit/view-sales/view-sales.component.html
@@ -1,12 +1,16 @@
 <div class="card-header">
     <b>View Sales</b>
 </div>
-<div class="col-sm-8">
-    <div class="text-sm-end">
-        <button type="button" class="btn btn-success btn-rounded mb-2 me-2" routerLink="/credit/addSales"><i class="mdi mdi-plus mr-1"></i>
-        + Add New Credit Sales</button>
+<div class="row">
+    <div class="col-md-8"></div>
+    <div class="col-md-4">
+        <div class="text-sm-end">
+            <button type="button" class="btn btn-success btn-rounded mb-2 me-2" routerLink="/credit/addSales"><i
+                    class="mdi mdi-plus mr-1"></i>
+                + Add New Credit Sales</button>
+        </div>
     </div>
-</div> 
+</div>
 <!-- begin::Header -->
 <div class="card-header border-0 pt-5">
     <div>
