--- a/src/app/pages/dealer/credit/add-sales/add-sales.component.html
+++ b/src/app/pages/dealer/credit/add-sales/add-sales.component.html
@@ -2,11 +2,14 @@
   <b>Add Sales</b>
 </div>
 
-<div class="col-sm-8">
-  <div class="text-sm-end">
-    <button type="button" class="btn btn-success btn-rounded mb-2 me-2" routerLink="/credit/viewSales"
-      [routerLinkActive]="['router-link-active']">
-      View Credit Sales </button>
+<div class="row">
+  <div class="col-md-8"></div>
+  <div class="col-md-4">
+    <div class="text-sm-end">
+      <button type="button" class="btn btn-success btn-rounded mb-2 me-2" routerLink="/credit/viewSales"
+        [routerLinkActive]="['router-link-active']">
+        View Credit Sales </button>
+    </div>
   </div>
 </div>
 <!-- <div class="row"> -->
